--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
               >×</a
             >
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Clients</a>
-            <a href="#">Contact</a>
+            <a href="#about-me">Обо мне</a>
+            <a href="#consultation">Консультация</a>
+            <a href="#pricing">Стоимость</a>
+            <a href="#contacts">Контакты</a>
           </div>
 
           <a class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></a>
@@ -479,10 +479,10 @@
                 <li><a href="#">Адрес</a></li>
               </ul>
               <ul>
-                <li><a class="link-main" href="#">+7 (965) 229-74-24</a></li>
-                <li><a class="link-main" href="#">yourEmail@mail.com</a></li>
-                <li><a class="link-main" href="#">www.your-website.com</a></li>
-                <li><a class="link-main" href="#">Токомбаева 23/1</a></li>
+                <li><a class="link-main" href="https://api.whatsapp.com/send/?phone=79652297424&text&type=phone_number&app_absent=0">+7 (965) 229-74-24</a></li>
+                <li><a class="link-main" href="mailto:yourmail@mail.ru">yourEmail@mail.com</a></li>
+                <li><a class="link-main" href="https://mysite.com">www.your-website.com</a></li>
+                <li><a class="link-main" href="https://2gis.kg/bishkek/firm/70000001068059058?m=74.616951%2C42.819868%2F16">Токомбаева 23/1</a></li>
               </ul>
             </div>
           </div>
