--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
             </ul>
           </div>
           <div class="header-logo">
-            <a href="#"><img src="./img/logo-removebg-preview.png" alt="logo" /></a>
+            <a href="#"
+              ><img src="./img/logo-removebg-preview.png" alt="logo"
+            /></a>
           </div>
           <div class="header-right">
             <ul>
@@ -52,7 +54,9 @@
             <a href="#contacts">Контакты</a>
           </div>
 
-          <a class="openbtn" onclick="openNav()"><i class="fa-solid fa-bars"></i></a>
+          <a class="openbtn" onclick="openNav()"
+            ><i class="fa-solid fa-bars"></i
+          ></a>
         </div>
       </div>
     </header>
@@ -83,10 +87,18 @@
                   <div class="about-title">
                     <h2>Обо мне</h2>
                     <div class="social-medias">
-                      <i class="fa-brands fa-linkedin-in"></i>
-                      <i class="fa-brands fa-twitter"></i>
-                      <i class="fa-brands fa-facebook-f"></i>
-                      <i class="fa-brands fa-instagram"></i>
+                      <a href="https://ru.linkedin.com/"
+                        ><i class="fa-brands fa-linkedin-in"></i
+                      ></a>
+                      <a href="https://twitter.com/?lang=ru"
+                        ><i class="fa-brands fa-twitter"></i
+                      ></a>
+                      <a href="https://www.facebook.com/?locale=ru_RU"
+                        ><i class="fa-brands fa-facebook-f"></i
+                      ></a>
+                      <a href="https://www.instagram.com/esf.kotova/"
+                        ><i class="fa-brands fa-instagram"></i
+                      ></a>
                     </div>
                   </div>
                   <div class="about-text">
@@ -123,10 +135,10 @@
                       <span>2018-2020</span>
                       <p class="item-text">
                         Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Harum minus, est vel volupta vero alias
-                        quibusdam temporibus officia illo deleniti doloremque
-                        sequi ab voluptatibus laudantium a ad? Eligendi,
-                        voluptate cupiditate!
+                        elit. Harum minus, est vel volupta vero alias quibusdam
+                        temporibus officia illo deleniti doloremque sequi ab
+                        voluptatibus laudantium a ad? Eligendi, voluptate
+                        cupiditate!
                       </p>
                     </div>
                     <div class="info-item">
@@ -135,10 +147,10 @@
                       <span>2018-2020</span>
                       <p class="item-text">
                         Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Harum minus, est vel volupta vero alias
-                        quibusdam temporibus officia illo deleniti doloremque
-                        sequi ab voluptatibus laudantium a ad? Eligendi,
-                        voluptate cupiditate!
+                        elit. Harum minus, est vel volupta vero alias quibusdam
+                        temporibus officia illo deleniti doloremque sequi ab
+                        voluptatibus laudantium a ad? Eligendi, voluptate
+                        cupiditate!
                       </p>
                     </div>
                     <div class="info-item">
@@ -147,10 +159,10 @@
                       <span>2018-2020</span>
                       <p class="item-text">
                         Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Harum minus, est vel volupta vero alias
-                        quibusdam temporibus officia illo deleniti doloremque
-                        sequi ab voluptatibus laudantium a ad? Eligendi,
-                        voluptate cupiditate!
+                        elit. Harum minus, est vel volupta vero alias quibusdam
+                        temporibus officia illo deleniti doloremque sequi ab
+                        voluptatibus laudantium a ad? Eligendi, voluptate
+                        cupiditate!
                       </p>
                     </div>
                   </div>
@@ -233,11 +245,11 @@
               </div>
             </div>
             <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+            <div id="consultation" class="swiper-pagination"></div>
 
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div  class="swiper-button-next"></div>
 
             <!-- If we need scrollbar -->
             <!-- <div class="swiper-scrollbar"></div> -->
@@ -246,7 +258,7 @@
       </div>
     </section>
 
-    <section id="consultation" class="section2">
+    <section class="section2">
       <div class="container">
         <div class="section2-title">
           <h1>Консультация</h1>
@@ -326,14 +338,14 @@
             <ul>
               <li>Бухгалтера</li>
               <li>фин.администратора</li>
-              <li>фин.директора</li>
+              <li id="pricing">фин.директора</li>
             </ul>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="pricing" class="section3">
+    <section class="section3">
       <div class="container">
         <div data-aos="zoom-in-down" class="pricing">
           <div class="price-list">
@@ -366,7 +378,7 @@
                 placeholder="Добавьте сообщение..."
               ></textarea>
             </div>
-            <div class="btn"><a href="#">Отправить</a></div>
+            <div class="btn"><a href="https://wa.me/+79652297424">Отправить</a></div>
           </div>
         </div>
       </div>
@@ -479,10 +491,30 @@
                 <li><a href="#">Адрес</a></li>
               </ul>
               <ul>
-                <li><a class="link-main" href="https://api.whatsapp.com/send/?phone=79652297424&text&type=phone_number&app_absent=0">+7 (965) 229-74-24</a></li>
-                <li><a class="link-main" href="mailto:yourmail@mail.ru">yourEmail@mail.com</a></li>
-                <li><a class="link-main" href="https://mysite.com">www.your-website.com</a></li>
-                <li><a class="link-main" href="https://2gis.kg/bishkek/firm/70000001068059058?m=74.616951%2C42.819868%2F16">Токомбаева 23/1</a></li>
+                <li>
+                  <a
+                    class="link-main"
+                    href="https://api.whatsapp.com/send/?phone=79652297424&text&type=phone_number&app_absent=0"
+                    >+7 (965) 229-74-24</a
+                  >
+                </li>
+                <li>
+                  <a class="link-main" href="mailto:yourmail@mail.ru"
+                    >yourEmail@mail.com</a
+                  >
+                </li>
+                <li>
+                  <a class="link-main" href="https://mysite.com"
+                    >www.your-website.com</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="link-main"
+                    href="https://2gis.kg/bishkek/firm/70000001068059058?m=74.616951%2C42.819868%2F16"
+                    >Токомбаева 23/1</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
@@ -508,10 +540,18 @@
         <div class="bottom-block">
           <p>Подпишитесь на меня в соц.сетях</p>
           <div class="social-medias">
-            <i class="fa-brands fa-linkedin-in"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
+            <a href="https://ru.linkedin.com/"
+              ><i class="fa-brands fa-linkedin-in"></i
+            ></a>
+            <a href="https://twitter.com/?lang=ru"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+            <a href="https://www.facebook.com/?locale=ru_RU"
+              ><i class="fa-brands fa-facebook-f"></i
+            ></a>
+            <a href="https://www.instagram.com/esf.kotova/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
           </div>
         </div>
       </div>
